--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.goodweight"
-    android:versionCode="095"
-    android:versionName="0.9.5" >
+    android:versionCode="096"
+    android:versionName="0.9.6" >
 
     <uses-sdk android:minSdkVersion="7" />
 
@@ -37,7 +37,9 @@
 
     <application android:debuggable="false" android:icon="@drawable/logo"
         android:label="@string/app_name">
-        <activity android:configChanges="orientation|keyboardHidden" android:name=".GoodWeightActivity"
+        <activity android:configChanges="orientation|keyboardHidden" 
+            android:screenOrientation="portrait"
+            android:name=".GoodWeightActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
