--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     	android:largeScreens="true"
     	android:normalScreens="true"
     	android:smallScreens="true"
-    	android:xlargeScreens="true"
+    	android:xlargeScreens="false"
     	android:resizeable="true"
     	android:anyDensity="true"
     	/>
